--- a/index.html
+++ b/index.html
@@ -2,26 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
-    <title>Vite App</title>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&display=swap');</style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <header>
     <h1 id="title" class="title">To Do List </h1>
-    <p class="param">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum suscipit mollitia temporibus odit placeat rerum velit, quo ab, quod aliquid nemo, optio sint magnam itaque incidunt assumenda similique cumque veritatis!</p>
   </header>
   <body>
-    <div class="input_todo">
-      <div class="todo_num">
-        <h3 class="num" id="num"></h3>
-      </div>
-      <div class="todo_text">
-        <input type="text" class="input" id="input">
-      </div>
-      <div class="todo_data">29/04/2024</div>
-      <button  class="enter_button" id="enter_button">oke</button>
+    <div class="div_input_toDo">
+      <input type="text" class="input_toDO">
+      <button class="button_input_enter"><i class="gg-enter"></i></button>
     </div>
-    <div class="list_todo"></div>
+    <div class="div_container_toDo_list">
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >ciao comwe va</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfksssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfkssaaaasssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfksssssssaaaeeeeessssssssssssseeeeeeeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfkjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdssssssssssssssssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+      <div class="div_toDo_component"> 
+        <h2 class="text_toDo" contenteditable="true" >hfdsjdsssssssssssssssssssssjhsdkfj</h2> 
+        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
+        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
+      </div>
+
+    </div>
   </body>
 </html>
