--- a/index.html
+++ b/index.html
@@ -13,51 +13,16 @@
   </header>
   <body>
     <div class="div_input_toDo">
-      <input type="text" class="input_toDO">
-      <button class="button_input_enter"><i class="gg-enter"></i></button>
+      <input type="text" class="input_toDO" id="input_toDO">
+      <button class="button_input_enter" id="button_input_enter"><i class="gg-enter"></i></button>
     </div>
-    <div class="div_container_toDo_list">
+    <div class="div_container_toDo_list" id="div_container_toDo_list">
       <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >ciao comwe va</h2> 
+        <p class="text_toDo" contenteditable="true" id="text_toDo">ciao comwe va</p> 
         <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
         <button class="button_delate_toDo"><i class="gg-trash"></i></button>
       </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfksssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfkssaaaasssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfksssssssaaaeeeeessssssssssssseeeeeeeeeeeeeeeeeaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdshfkjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdssssssssssssssssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsssssssssssssssssssssssssssssssssssssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-      <div class="div_toDo_component"> 
-        <h2 class="text_toDo" contenteditable="true" >hfdsjdsssssssssssssssssssssjhsdkfj</h2> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
-
+ 
     </div>
   </body>
 </html>
