add, and delate

--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
   </header>
   <body>
     <div class="div_input_toDo">
-      <input type="text" class="input_toDO" id="input_toDO">
+      <input type="text" class="input_toDO" id="input_toDO" value="">
       <button class="button_input_enter" id="button_input_enter"><i class="gg-enter"></i></button>
     </div>
     <div class="div_container_toDo_list" id="div_container_toDo_list">
-      <div class="div_toDo_component"> 
-        <p class="text_toDo" contenteditable="true" id="text_toDo">ciao comwe va</p> 
-        <button class="check_toDo"><span class="material-symbols-outlined">check</span></button>
-        <button class="button_delate_toDo"><i class="gg-trash"></i></button>
-      </div>
  
     </div>
   </body>
